[workspace]
resolver = "2"
members = [
    "logic/cache",
    "logic/config",
    "logic/logic",
    "logic/mock_gen",
    "logic/protos",
    "logic/service",
    "logic/text",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[profile.release]
lto = true
