[package]
name = "logic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "logic"
crate-type = ["staticlib"]

[dependencies]
dashmap = "4.0.2"
enum-as-inner = "0.3.3"
env_logger = "0.8.4"
futures = "0.3.15"
futures-cache = "0.10.0"
html-escape = "0.2.9"
lazy_static = "1.4.0"
log = "0.4.14"
peg = "0.7.0"
protobuf = "2.24.1"
reqwest = "0.11.4"
serde = { version = "1.0.126", features = ["derive"] }
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
thiserror = "1.0.25"
tokio = { version = "1.7.1", features = ["rt-multi-thread", "macros", "time"] }
once_cell = "1.8.0"
chrono = "0.4.19"
sled = { git = "https://github.com/spacejam/sled", rev = "95a883f" }
regex = "1.5.4"

[build-dependencies]
cbindgen = "0.19.0"
protoc-rust = "2.24.1"

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]

[profile.release]
debug = true
