[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
lazy_static = "1.4.0"
log = "0.4.14"
protos = { path = "../protos" }
sled = { git = "https://github.com/spacejam/sled", rev = "95a883f" }
thiserror = "1.0.26"
tokio = { version = "1.8.1", features = ["rt-multi-thread", "macros", "time"] }
