[package]
name = "logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "logic"
crate-type = ["staticlib", "cdylib"]

[dependencies]
env_logger = "0.9"
lazy_static = "1.4"
log = "0.4"
tokio = { version = "1.21", features = ["rt-multi-thread", "macros", "time"] }
protos = { path = "../protos" }
service = { path = "../service" }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19"
android_logger = "0.11"

[dev-dependencies]
dotenv = "0.15"

[build-dependencies]
cbindgen = "0.24"

# [features]
# default = ["with-serde"]
# with-serde = ["protobuf/with-serde"]
