[package]
name = "logic"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "logic"
crate-type = ["staticlib", "cdylib"]

[dependencies]
env_logger = "0.10"
lazy_static = "1"
log = "0.4"
protos = { path = "../protos" }
service = { path = "../service" }
tokio = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
jni = "0.19"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
dotenv = "0.15"

# [features]
# default = ["with-serde"]
# with-serde = ["protobuf/with-serde"]
