[package]
name = "mock_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
protos = { path = "../protos" }
serde = { workspace = true }
serde_yaml = "0.9"
text = { path = "../text" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
