[package]
name = "protos"
version = "0.1.0"
edition = "2021"


[build-dependencies]
cargo-emit = "0.2"
protoc-rust = "2" # TODO: protobuf-codegen = "3"

[dependencies]
base-62 = "0.1"
paste = "1"
protobuf = "2" # TODO: 3
serde = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
