[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache = { path = "../cache" }
chrono = "0.4"
config = { path = "../config" }
dashmap = "6"
futures = "0.3"
lazy_static = "1"
log = "0.4"
paste = "1"
protos = { path = "../protos" }
randua = "0.1"
regex = "1"
reqwest = { version = "0.12", features = [
    "charset",
    "rustls-tls",
    "multipart",
], default-features = false }
serde_json = "1"
sxd-document = "0.3"
sxd-xpath = "0.4"
text = { path = "../text" }
thiserror = "2"
tokio = { workspace = true }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
dotenv = "0.15"
